@@ -155,7 +155,7 @@ void SourceBrowser_Window::Update(void)
   if(!gp || !gp->cpu)
     return;
 
-  SetPC(gp->cpu->pc->value); // FIXME should use get_value());
+  SetPC(gp->cpu->pc->get_raw_value());
 }
 
 
