@@ -104,6 +104,8 @@ void Bit_op::decode(Processor *new_cpu, unsigned int new_opcode)
 	case  _P18F442_:
 	case  _P18F248_:
 	case  _P18F452_:
+	case  _P18F1220_:
+	case  _P18F1320_:
           mask = 1 << ((opcode >> 9) & 7);
           register_address = opcode & REG_MASK_16BIT;
           access = opcode & ACCESS_MASK_16BIT;
